--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,23 @@
+:root {
+    --color-primary: #3498db;
+    --color-secondary: #2ecc71;
+    --color-background: #ecf0f1;
+    --color-text: #34495e;
+    --color-light: #ffffff;
+}
+
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    color: #333;
+    color: var(--color-text);
+    background-color: var(--color-background);
 }
 
 header {
-    background-color: #4a90e2;
-    color: white;
+    background-color: var(--color-primary);
+    color: var(--color-text);
     padding: 1rem;
     display: flex;
     flex-direction: row;
@@ -17,16 +26,15 @@ header {
 
 nav {
     width: max-content;
+    color: var(--color-light);
     ul {
         list-style-type: none;
         padding: 0;
-        color: white;
         text-decoration: none;
         li {
             display: inline;
             margin-right: 20px;
             a {
-                color: white;
                 text-decoration: none;
             }
         }
@@ -39,8 +47,9 @@ main {
     margin: 0 auto;
 }
 
-h1 {
-    color: #4a90e2;
+h1,
+h2 {
+    color: var(--color-primary);
 }
 
 section {
@@ -48,7 +57,7 @@ section {
 }
 
 .calendario-placeholder {
-    background-color: #f0f0f0;
+    background-color: var(--color-primary);
     border: 1px solid #ddd;
     padding: 20px;
     text-align: center;
@@ -67,8 +76,8 @@ section {
 }
 
 footer {
-    background-color: #333;
-    color: white;
+    background-color: rgb(229 231 235);
+    color: var(--color-text);
     text-align: center;
     padding: 8px;
     position: fixed;
