--- a/css/style.css
+++ b/css/style.css
@@ -15,9 +15,14 @@ body {
     background-color: var(--color-background);
 }
 
+#app {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 header {
     background-color: var(--color-primary);
-    color: var(--color-text);
     padding: 1rem;
     display: flex;
     flex-direction: row;
@@ -36,6 +41,7 @@ nav {
             margin-right: 20px;
             a {
                 text-decoration: none;
+                color: black;
             }
         }
     }
@@ -45,11 +51,14 @@ main {
     padding: 20px;
     max-width: 1200px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
 }
 
 h1,
 h2 {
     color: var(--color-primary);
+    margin: 0;
 }
 
 section {
@@ -95,5 +104,18 @@ footer {
     #calendario,
     #lista-citas {
         width: 30%;
+    }
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    tr {
+        border-bottom: 1px solid #ddd;
+        td,
+        th {
+            padding: 10px;
+            text-align: start;
+        }
     }
 }
